--- a/vesttech/src/pages/styles/Header.css
+++ b/vesttech/src/pages/styles/Header.css
@@ -1,4 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
+.heading {
+  background: url(../../images/hero - bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: #130441;
+  min-height: 100vh;
+}
+
 .headers {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.header__img {
+  width: 600px;
+  height: 600px;
+}
+
+.header__img img{
+  width: 100%;
+  height: 100%;
+}
+
+.header__text h1 {
+  font-family: "Nunito", sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  color: #013289;
+}
+
+.header__text h2 {
+  font-family: "Nunito", sans-serif;
+  font-size: 35px;
+  font-weight: 700;
+  color: #013289;
+}
+
+.header__text p {
+  color: #444444;
+  font-size: 26px;
+}
+
+.header__text {
+  margin-top: 100px;
+  margin-left: 120px;
+}
+
+.heading .btn-get-started {
+  margin-top: 30px;
+  line-height: 0;
+  padding: 15px 40px;
+  border-radius: 4px;
+  transition: 0.5s;
+  color: #fff;
+  background: #4154f1;
+  box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
+  text-decoration: none;
+}
+
+.heading .btn-get-started span {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 1px;
 }
