--- a/vesttech/src/pages/styles/Navbar.css
+++ b/vesttech/src/pages/styles/Navbar.css
@@ -5,17 +5,21 @@ navbar {
   padding: 0 10vw;
 }
 
-.main-navbar.main-navbar-scrolled {
-  background: #fff;
-  padding: 15px 0;
-  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-}
-
-.main-navbar {
+.main_navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: "Nunito", sans-serif;
+}
+
+.main_navbar.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    background: #fff;
+    box-shadow: 0px 2px 20px rgb(1 41 112 / 10%);
 }
 
 .brand-logo {
