--- a/vesttech/src/pages/styles/About.css
+++ b/vesttech/src/pages/styles/About.css
@@ -35,7 +35,7 @@
 .about__para p {
   font-size: 20px;
   font-weight: 300;
-  color: #2db6fa;
+  color: #212529;
   text-align: center;
   padding-left: 40px;
   padding-right: 40px;
