--- a/vesttech/client/src/styles/Navbar.css
+++ b/vesttech/client/src/styles/Navbar.css
@@ -9,7 +9,7 @@
     width: 100%;
     align-items: center;
     justify-content: space-between;
-    background-color: black;
+    background-color: #0f0e13;
     padding: 0px 30px;
 }
 .logo{
